HAWQ-979. Resource Broker Should Reconnect Hadoop Yarn When Failed to Get Cluster Report